tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_enums_missing_cases_with_empty_match/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Missing cases: `A`, `B`, `C`, and 23 more not shown
  ┌─ src/main.nr:3:19
  │
3 │             match Abc::A {}
  │                   ------
  │

Aborting due to 1 previous error
